# Samhati

./: .gitignore  ARCHITECTURE.md  CONFIG_DEFAULTS.md  Cargo.toml  MVP_SPEC.md  PETALS_IMPLEMENTATION_PLAN.md  PLAN.md  README.md  WHITEPAPER.md  install.sh  models.json  sample-config.json  sample-peers.json  sample-rtt.json  stablelm-3b-4e1t.json  whitepaper.tex
app-frontend/: App.tsx  index.css  index.html  package.json  tailwind.config.js  vite.config.ts
app-frontend/components/: ChatInput.tsx  ChatMessage.tsx  EloDisplay.tsx  ModelCard.tsx  NodeStatus.tsx  RewardCounter.tsx  Sidebar.tsx
app-frontend/hooks/: useChat.ts  useNode.ts  useWallet.ts
app-frontend/lib/: api.ts  types.ts
app-frontend/pages/: Chat.tsx  Dashboard.tsx  Models.tsx  Settings.tsx  Wallet.tsx
app-tauri/: Cargo.toml  tauri.conf.json
app-tauri/src/: commands.rs  main.rs  model_manager.rs  node.rs  state.rs  wallet.rs
crates/cluster-manager/: Cargo.toml
crates/cluster-manager/src/: lib.rs
crates/inference-coordinator/: Cargo.toml
crates/inference-coordinator/src/: activation_cache.rs  candle_runner.rs  coordinator.rs  iroh_executor.rs  kv_cache.rs  lib.rs  llm_shard.rs  model_runner.rs  plan.rs  qwen35_cache.rs  qwen35_shard.rs  rpc.rs  swarm_planner.rs  tensor_frame.rs  weight_cache.rs
crates/mesh-node/: Cargo.toml
crates/mesh-node/src/: api.rs  inference.rs  main.rs  persist.rs  protocol.rs  scheduler.rs  server.rs  state.rs  swarm_bridge.rs
crates/model-config/: Cargo.toml
crates/model-config/src/: estimate.rs  lib.rs  parse.rs
crates/proximity-router/: Cargo.toml
crates/proximity-router/src/: lib.rs  swarm.rs
crates/samhati-ranking/: Cargo.toml
crates/samhati-ranking/src/: bradley_terry.rs  elo.rs  lib.rs  reputation.rs  rewards.rs  types.rs
crates/samhati-swarm/: Cargo.toml
crates/samhati-swarm/src/: classifier.rs  config.rs  coordinator.rs  lib.rs  registry.rs  types.rs
crates/samhati-toploc/: Cargo.toml
crates/samhati-toploc/src/: calibration.rs  lib.rs  proof.rs  prover.rs  types.rs  verifier.rs
crates/samhati-tui/: Cargo.toml  index.html
crates/samhati-tui/src/: api.rs  app.rs  events.rs  identity.rs  main.rs  model_download.rs  network.rs  node_runner.rs  registry.rs  settlement.rs  swarm.rs  ui.rs  wallet.rs  web_main.rs
crates/samhati-tui/src/tabs/: chat.rs  dashboard.rs  mod.rs  models.rs  settings.rs  wallet.rs
crates/samhati-tui/tests/: deep_e2e.rs  full_swarm_live.rs  reputation_live.rs  solana_submit.rs  swarm_e2e.rs
crates/shard-store/: Cargo.toml
crates/shard-store/src/: lib.rs
docs/: index.html
llama-toploc/: build.sh  toploc-proof.h  toploc.patch
pipeline/: __init__.py  cli.py  collector.py  config.py  dataset.py  exporter.py  pyproject.toml  scheduler.py  trainer.py
pipeline/configs/: base_dpo.yaml  base_sft.yaml  domains.yaml
pipeline/scripts/: collect.sh  export.sh  train.sh
pipeline/tests/: test_collector.py  test_dataset.py  test_trainer.py
programs/: Anchor.toml  Cargo.toml
programs/samhati-protocol/: Cargo.toml
programs/samhati-protocol/src/: errors.rs  lib.rs
programs/samhati-protocol/src/instructions/: calibrate_node.rs  emit_rewards.rs  mod.rs  register_node.rs  slash_node.rs  submit_round.rs
programs/samhati-protocol/src/state/: mod.rs  node_account.rs  protocol_config.rs  round_account.rs
scripts/: chat.sh  download_shard.py  init_protocol.py  run_a.sh  run_b.sh  samhati.sh  samhati_qwen35.sh
sdk/python/: pyproject.toml
sdk/python/samhati/: __init__.py  client.py  exceptions.py  streaming.py  types.py
sdk/python/tests/: test_client.py
sdk/rust/: Cargo.toml
sdk/rust/src/: client.rs  error.rs  lib.rs  streaming.rs  types.rs
sdk/typescript/: package.json  tsconfig.json
sdk/typescript/src/: client.ts  errors.ts  index.ts  streaming.ts  types.ts
sdk/typescript/tests/: client.test.ts
website/: package-lock.json  package.json
website/src/app/: Particles.tsx  globals.css  layout.tsx  page.tsx
