[workspace]
members = [
  "crates/mesh-node",
  "crates/proximity-router",
  "crates/cluster-manager",
  "crates/shard-store",
  "crates/inference-coordinator",
  "crates/model-config",
  "crates/samhati-swarm",
  "crates/samhati-ranking",
  "crates/samhati-toploc",
  "sdk/rust",
]
exclude = [
  "programs/samhati-protocol",
  "app-tauri",
]
resolver = "2"
