[workspace]
members = [
  "crates/mesh-node",
  "crates/proximity-router",
  "crates/cluster-manager",
  "crates/shard-store",
  "crates/inference-coordinator",
  "crates/model-config",
  "crates/samhati-swarm",
  "crates/samhati-ranking",
  "crates/samhati-toploc",
  "sdk/rust",
]
exclude = [
  "app-tauri",
  "programs/samhati-protocol",
]
resolver = "2"

[profile.release]
overflow-checks = true
