[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "samhati-pipeline"
version = "0.1.0"
description = "Self-evolving training pipeline for Samhati decentralized AI"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1",
    "transformers>=4.40",
    "peft>=0.10",
    "trl>=0.8",
    "bitsandbytes>=0.43",
    "datasets>=2.18",
    "accelerate>=0.28",
    "wandb>=0.16",
    "huggingface-hub>=0.22",
    "click>=8.1",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
samhati-pipeline = "samhati_pipeline.cli:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
