[package]
name = "inference-coordinator"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
candle-core = { version = "0.9.2", optional = true }
safetensors = "0.4.5"
serde_bytes = "0.11.19"
iroh = "0.96.1"
tokio = "1.49.0"
bincode = "1.3.3"

[features]
candle = ["candle-core"]
