[package]
name = "inference-coordinator"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow          = "1"
async-trait     = "0.1"
half            = { version = "2", features = ["serde"] }
serde           = { version = "1", features = ["derive"] }
serde_bytes     = "0.11"
bincode         = "1.3"
iroh            = "0.96.1"
tokio           = { version = "1", features = ["rt", "time", "sync"] }
proximity-router = { path = "../proximity-router" }
shard-store      = { path = "../shard-store" }

# Burn: only pulled in when the `burn` feature is enabled
burn        = { version = "0.20", default-features = false, features = ["ndarray", "wgpu"], optional = true }
safetensors = { version = "0.4", optional = true }
memmap2     = { version = "0.9", optional = true }

[features]
burn = ["dep:burn", "dep:safetensors", "dep:memmap2"]
