[package]
name = "mesh-node"
version = "0.1.0"
edition = "2021"

[dependencies]
model-config = { path = "../model-config" }
inference-coordinator = { path = "../inference-coordinator" }
proximity-router = { path = "../proximity-router" }
cluster-manager = { path = "../cluster-manager" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
hex = "0.4"
iroh = "0.96"
iroh-gossip = "0.96"
n0-future = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time", "process"] }
sysinfo = "0.37"
candle-core = { version = "0.9.2", optional = true }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
axum = { version = "0.7", features = ["json"] }
serde_bytes = "0.11.19"
bytes = "1.11.1"
bincode = "1.3.3"

[features]
candle = ["candle-core", "inference-coordinator/candle"]
