[package]
name = "mesh-node"
version = "0.1.0"
edition = "2021"

[dependencies]
model-config          = { path = "../model-config" }
inference-coordinator = { path = "../inference-coordinator" }
proximity-router      = { path = "../proximity-router" }
cluster-manager       = { path = "../cluster-manager" }
shard-store           = { path = "../shard-store" }
samhati-swarm         = { path = "../samhati-swarm" }
samhati-ranking       = { path = "../samhati-ranking" }
samhati-toploc        = { path = "../samhati-toploc" }

serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
serde_bytes = "0.11"
anyhow      = "1"
hex         = "0.4"
iroh        = "0.96"
iroh-gossip = "0.96"
n0-future   = "0.3"
tokio       = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time", "process"] }
sysinfo     = "0.37"
reqwest     = { version = "0.12", features = ["json", "rustls-tls"] }
axum        = { version = "0.7", features = ["json"] }
bytes       = "1"
bincode      = "1.3"
async-trait  = "0.1"
futures-util = "0.3"
memmap2      = "0.9"
safetensors  = "0.4"
subtle       = "2"

[features]
burn = ["inference-coordinator/burn"]
