[package]
name = "samhati-ranking"
version = "0.1.0"
edition = "2021"
description = "BradleyTerry pairwise ranking aggregation and ELO management for Samhati swarm inference"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"

[dev-dependencies]
