[package]
name = "samhati-swarm"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio      = { version = "1", features = ["rt", "time", "sync", "macros"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow     = "1"
tracing    = "0.1"
async-trait = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
