[package]
name = "samhati-toploc"
version = "0.1.0"
edition = "2021"
description = "Proof of Inference (PoI) — cryptographic proof built from output logprobs, Ed25519-signed, with model binding, node binding, and freshness checks"

[dependencies]
blake3 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
rand = "0.8"
ed25519-dalek = { version = "2", features = ["rand_core"] }

[dev-dependencies]
rand = "0.8"
