[package]
name = "samhati-tui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "samhati"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
chrono = "0.4"
unicode-width = "0.2"
sysinfo = "0.37"
dirs = "5"
futures-util = "0.3"
bs58 = "0.5"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
hex = "0.4"
tempfile = "3"
iroh = "0.96"
iroh-gossip = "0.96"
tracing = "0.1"
