[package]
name = "samhati-protocol"
version = "0.1.0"
description = "Samhati decentralized AI inference protocol — on-chain identity, reputation, proofs, and rewards"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "samhati_protocol"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
