[package]
name = "samhati-sdk"
version = "0.1.0"
edition = "2021"
description = "OpenAI-compatible SDK for the Samhati decentralized AI network"
license = "MIT"

[dependencies]
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
futures = "0.3"
async-stream = "0.3"
base64 = "0.22"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
wiremock = "0.6"
